@@ -33,6 +33,7 @@ v1.2.1
   compatibility, pilot:keywords_all() has been added (aliases pilot::keywords())
 + added new class to retrieve images from movieposterdb.com
 ! imdb::plotoutline() did not cut surrounding DIV
++ added config setting to optionally convert imdb movie information to UTF8
 
 v1.2.0 (04.10.2009)
 -------------------
